fix:MET-600 fix bug clean code